@@ -13,13 +13,13 @@ inline ZeroLeptonRunPeriod periodFromString(const std::string& period)
   return INVALID;
 }
 
-enum ZeroLeptonDerivationTag {NotADerivation, p1872, p2352, INVALID_Derivation};
+enum ZeroLeptonDerivationTag {NotADerivation, p1872, p2353, INVALID_Derivation};
 
 inline ZeroLeptonDerivationTag derivationTagFromString(const std::string& tag)
 {
   if ( tag == "" || tag =="None" || tag == "none" || tag == "NA") return NotADerivation;
   if ( tag == "p1872" ) return p1872;
-  if ( tag == "p2352" ) return p2352;
+  if ( tag == "p2353" ) return p2353;
   return INVALID_Derivation;
 }
 
