@@ -1,6 +1,7 @@
 05-Jun-2015 Laurent Duflot
 	* PhysObjProxyUtils + CR: change energies to GeV in the *mini-tuple*
 	(the rest of the code still use MeV !) razor variables unchanged.
+	* ZeroLeptonRunPeriod, SR: change p2352 (skim) to p2353 (no skim)
 
 05-Jun-2015 Laurent Duflot
 	* ZeroLeptonNTVars, PhysObjProxyUtils: add tau pT, eta, phi
